* JMS SingleConnectionFactory performs start call within connection monitor and only when not started already (SPR-5987 backport)
* fixed MessageListenerAdapter's "getSubscriptionName()" to work without delegate as well (SPR-5309 backport)
* refined logging in JMS SingleConnectionFactory and DefaultMessageListenerContainer
* handle "Class not found" error during deserialization (SPR-5880)

Package org.springframework.mail
* MimeMessageHelper encodes from, to, cc, bcc String addresses with given encoding as well (SPR-6530 backport)

Package org.springframework.orm
* AnnotationSessionFactoryBean now properly scans subpackages as well (SPR-5324)
* Query call chaining works with shared EntityManager proxy outside of transaction as well (SPR-6726 backport)

Package org.springframework.remoting
* fixed HTTP invoker to support resolution of multi-level primitive array classes again (SPR-5473 backport)
* added JAX-WS workaround for WebLogic 10.3 (SPR-5771 backport)

Package org.springframework.transaction
* WebSphereUowTransactionManager preserves original exception in case of rollback (SPR-5270 backport)

Package org.springframework.web
* only try to restore attribute if the value differs (ignoring Portlet spec attributes) (SPR-6712 backport)
* avoid rendering invalid ids (SPR-6840 backport)


Changes in version 2.5.6.SEC01 (2009-04-22)
-------------------------------------

Package org.springframework.aop
* changed serialization behavior of AbstractRegexpMethodPointcut and JdkRegexpMethodPointcut to avoid recompilation

Package org.springframework.core
* fixed issue with GenericTypeResolver where garbage collection was prevented under certain circumstances


Changes in version 2.5.6 (2008-10-31)
-------------------------------------

General
* removed outdated EAR support from sample applications
* upgraded to AspectJ 1.6.2 (retaining compatibility with AspectJ 1.5.x and 1.6.x)
* upgraded to EHCache 1.5.0 (retaining compatibility with EHCache 1.2 and higher)