@@ -179,9 +179,14 @@ public class MethodParameter {
 	 */
 	public Class getParameterType() {
 		if (this.parameterType == null) {
-			this.parameterType = (this.method != null ?
-					this.method.getParameterTypes()[this.parameterIndex] :
-					this.constructor.getParameterTypes()[this.parameterIndex]);
+			if (this.parameterIndex < 0) {
+				this.parameterType = (this.method != null ? this.method.getReturnType() : null);
+			}
+			else {
+				this.parameterType = (this.method != null ?
+						this.method.getParameterTypes()[this.parameterIndex] :
+						this.constructor.getParameterTypes()[this.parameterIndex]);
+			}
 		}
 		return this.parameterType;
 	}
